tests/deriving/should_fail/T2701.stderr
T2701.hs:10:32: error: [GHC-48959]
    • Can't make a derived instance of ‘Data Foo’:
        Don't know how to derive ‘Data’ for type ‘Int#’
    • In the data type declaration for ‘Foo’

